fix: global styles and code alignment

--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,6 +1,4 @@
-.content{
-    grid-area: c;
-}
+
 
 .content img {
     height: 200px;
